Fix Asterisk SIP transports, fix tenant billing, fix IVRBuilder UI, and add mock API